@@ -5,11 +5,14 @@ MonoMakefile.cs \
 MonoMakefileFormat.cs \
 MonoProject.cs \
 Commands.cs \
-MonoProjectConfiguration.cs
+MonoProjectConfiguration.cs \
+MonoTestProvider.cs
 
 REFS = /r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
        /r:$(top_builddir)/build/bin/MonoDevelop.Gui.Widgets.dll \
        /r:$(top_builddir)/build/bin/MonoDevelop.Base.dll \
+       /r:$(top_builddir)/build/AddIns/NUnit/MonoDevelop.NUnit.dll \
+       /r:nunit.core.dll \
        $(GTK_SHARP_LIBS) \
        $(GLADE_SHARP_LIBS) \
        $(GCONF_SHARP_LIBS) \
@@ -21,7 +24,11 @@ ADDIN_BUILD = $(top_builddir)/build/AddIns/MonoDeveloperExtensions
 
 DLL = $(ADDIN_BUILD)/MonoDeveloperExtensions.dll
 
+if ENABLE_MONOEXTENSIONS
 all: $(ADDIN_BUILD)/$(ADDIN) $(DLL)
+else
+all:
+endif
 
 $(ADDIN_BUILD)/$(ADDIN): $(srcdir)/$(ADDIN)
 	mkdir -p $(ADDIN_BUILD)
@@ -37,6 +44,7 @@ EXTRA_DIST = $(FILES) $(ADDIN)
 
 include $(top_srcdir)/Makefile.include
 
+if ENABLE_MONOEXTENSIONS
 MonoDeveloperExtensionsdir = $(MD_ADDIN_DIR)/MonoDeveloperExtensions
 MonoDeveloperExtensions_DATA = $(DLL) $(ADDIN_BUILD)/$(ADDIN)
-
+endif
